--- a/static/interface/css/style.css
+++ b/static/interface/css/style.css
@@ -6,6 +6,15 @@ body {
   width: 100%;
 }
 
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0px; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+
 header {
   height: 100vh;
   width: 70%;
@@ -121,6 +130,12 @@ main {
   transition: all 0.2s ease;
 }
 
+.nav-menu-item.active {
+  background-color: rgba(0, 0, 0, 0.15);
+  color: white;
+  transition: all 0.2s ease;
+}
+
 .content-div {
   width: calc(100% - 196px);
   height: 1024px;
@@ -200,15 +215,13 @@ main {
   padding-bottom: 0%;
 }
 
-#section-text-analysis-content {
-}
-
 #video-content {
   display: flex;
   color: white !important;
 }
 
 #image-content {
+  width: 100%;
 }
 
 #row {
@@ -220,13 +233,13 @@ main {
 }
 
 #row2 {
-  width: 44%;
-  padding-top: 10%;
-  padding-left: 8%;
+  justify-content: space-evenly;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 #column2 {
-  display: table-cell;
   padding: 2%;
   color: white !important;
   font-size: 16px !important;
