Last update (from 22 Dec 2020)

--- a/interface/templates/interface/base.html
+++ b/interface/templates/interface/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>{%block title%}Base Page{%endblock%}</title>
 
+    <link rel='icon' type='image/x-icon' href="{% static 'interface/img/logo2.png' %}" />
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -34,10 +35,6 @@
 
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
     <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
-
-
-
-
 
     <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
